<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:summary="impostazioni "
        android:title="@string/frequency" >
        
        <ListPreference
            android:entries="@array/freqListOptions"
            android:entryValues="@array/freqListValues"
            android:key="modelFreq"
            android:title="@string/models" 
            android:summary="@string/modelFrequency"/>
        
        <ListPreference
            android:entries="@array/freqListOptions"
            android:entryValues="@array/freqListValues"
            android:key="jobFreq"
            android:title="@string/jobs" 
            android:summary="@string/jobFrequency"/>
        
        <ListPreference
            android:entries="@array/freqListOptions"
            android:entryValues="@array/freqListValues"
            android:key="statusFreq"
            android:title="@string/status" 
            android:summary="@string/statusFrequency"/>
        
    </PreferenceCategory>
    
</PreferenceScreen>